# gh-issue-graph

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: build.sh
src/: config.rs  error.rs  main.rs  theme.rs  types.rs
src/cli/: filter.rs  output.rs
src/github/: fetcher.rs  graphql.rs  mod.rs  queries.rs
src/graph/: cluster.rs  layout.rs  mod.rs  model.rs
src/monitor/: app.rs  config.rs  core.rs  json_output.rs  mod.rs  types.rs
src/monitor/github/: branches.rs  graphql.rs  mod.rs
src/monitor/ui/: detail.rs  effects.rs  filter_bar.rs  footer.rs  header.rs  issue_table.rs  milestone_picker.rs  mod.rs  theme.rs
src/tui/: app.rs  event.rs  mod.rs
src/tui/widgets/: filter_panel.rs  graph_canvas.rs  header.rs  legend.rs  mod.rs  node_detail.rs  search.rs  status_bar.rs
